versao dev ok até sprint 4